--- a/stylus/question.styl
+++ b/stylus/question.styl
@@ -42,6 +42,7 @@ modal-bg = rgba(val, val, val, 0.5)
 
         .timer-content
             display none
+            height 125px
 
             .timer-game-flash
                 text-align center
